--- a/voiceclaim-blaze.html
+++ b/voiceclaim-blaze.html
@@ -1,3 +1,5 @@
+<center>
+
 <div class="main1">
 <div class="profile1"><img src="IMGLINK"></div>
 
@@ -8,6 +10,7 @@
 <div class="voice1">Mason Blomberg<br/>
 kid!Blitzo – Helluva Boss</div></div></div>
 
+<div style="width:50px; height:100px; background:trans; margin-right: 50px;"></div>
 
 <div style="clear:both;"></div></div>
 
@@ -43,3 +46,6 @@ kid!Blitzo – Helluva Boss</div></div>
     .youtube2 { height: 232px; width: 300px; background: black; padding: 5px; color: white;}
     .voice2 { font-family: 'Courier New', Courier, monospace; font-size: 11px; color: #ccc; text-align: left; padding: 5px; background-color: none; width: 300px; margin-top: 0; }
 </style>
+
+</center>
+
