--- a/voiceclaim-blaze.html
+++ b/voiceclaim-blaze.html
@@ -15,7 +15,7 @@ kid!Blitzo – Helluva Boss</div></div></div>
 <div style="clear:both;"></div></div>
 
 <style>
-.main1 { width:auto; padding:10px; margin: 50% auto;  float: left} 
+.main1 { width:auto; padding:10px; margin-top: 50%; margin-left: 20%;  float: left} 
 .profile1 { border:10px solid black;  width:100px; height:100px; float:left;  } 
 .profile1 img { width:100px; height:100px; }
 .triangle1 { background-image: url(https://i.postimg.cc/mks3FvdR/tri.png); background-position: 0px 40px; background-repeat: no-repeat; padding-left: 50px; float: left; width: 230px; line-height: 100%; font-family: helvetica; font-size: 11px; text-align: justify} 
@@ -38,7 +38,7 @@ kid!Blitzo – Helluva Boss</div></div>
     <div style="clear:both;"></div></div>
 
 <style>
-    .main2 { width:auto; padding:10px; margin:50% auto; display: flex; justify-content: flex-end; align-items: right; }
+    .main2 { width:auto; padding:10px; margin-top:50%; margin-left:20%; display: flex; justify-content: flex-end; align-items: right; }
     .profile2 { border:10px solid black; width:100px; height:100px; margin-left: 0px; }
     .profile2 img { width:100px; height:100px; }
     .triangle2 { background-image: url(https://i.postimg.cc/bJbHry93/tri2.png); background-position: 13px 40px; background-repeat: no-repeat; width: 50px; line-height: 100%; font-family: helvetica; font-size: 11px; text-align: justify; margin-left: 0px; }
