--- a/voiceclaim-blaze.html
+++ b/voiceclaim-blaze.html
@@ -1,5 +1,7 @@
 <center>
 
+<div style="width:auto; height:500px; background:#000;">test</div>
+
 <div class="main1">
 <div class="profile1"><img src="IMGLINK"></div>
 
@@ -15,7 +17,7 @@ kid!Blitzo – Helluva Boss</div></div></div>
 <div style="clear:both;"></div></div>
 
 <style>
-.main1 { width:auto; padding:10px; margin-top: 50%; margin-left: 20%;  float: left} 
+.main1 { width:auto; padding:10px; margin-top: 0; margin-left: 20%;  margin-right: 50px; float: left} 
 .profile1 { border:10px solid black;  width:100px; height:100px; float:left;  } 
 .profile1 img { width:100px; height:100px; }
 .triangle1 { background-image: url(https://i.postimg.cc/mks3FvdR/tri.png); background-position: 0px 40px; background-repeat: no-repeat; padding-left: 50px; float: left; width: 230px; line-height: 100%; font-family: helvetica; font-size: 11px; text-align: justify} 
@@ -38,7 +40,7 @@ kid!Blitzo – Helluva Boss</div></div>
     <div style="clear:both;"></div></div>
 
 <style>
-    .main2 { width:auto; padding:10px; margin-top:50%; margin-left:20%; display: flex; justify-content: flex-end; align-items: right; }
+    .main2 { width:auto; padding:10px; margin-top:0; margin-right:20%; margin-left:50px; display: flex; justify-content: flex-end; align-items: right; }
     .profile2 { border:10px solid black; width:100px; height:100px; margin-left: 0px; }
     .profile2 img { width:100px; height:100px; }
     .triangle2 { background-image: url(https://i.postimg.cc/bJbHry93/tri2.png); background-position: 13px 40px; background-repeat: no-repeat; width: 50px; line-height: 100%; font-family: helvetica; font-size: 11px; text-align: justify; margin-left: 0px; }
@@ -46,6 +48,8 @@ kid!Blitzo – Helluva Boss</div></div>
     .youtube2 { height: 232px; width: 300px; background: black; padding: 5px; color: white;}
     .voice2 { font-family: 'Courier New', Courier, monospace; font-size: 11px; color: #ccc; text-align: left; padding: 5px; background-color: none; width: 300px; margin-top: 0; }
 </style>
+
+<div style="width:auto; height:500px; background:#000;">test</div>
 
 </center>
 
