--- a/voiceclaim-blaze.html
+++ b/voiceclaim-blaze.html
@@ -17,7 +17,7 @@ kid!Blitzo – Helluva Boss</div></div></div>
 <div style="clear:both;"></div></div>
 
 <style>
-.main1 { width:auto; padding:10px; margin-top: 0; margin-left: 20%;  margin-right: 50px; float: left} 
+.main1 { width:auto; padding:10px; margin-top: 0; margin-left: 20%;  margin-right: 50px;display: flex; justify-content: flex-end; align-items: left;} 
 .profile1 { border:10px solid black;  width:100px; height:100px; float:left;  } 
 .profile1 img { width:100px; height:100px; }
 .triangle1 { background-image: url(https://i.postimg.cc/mks3FvdR/tri.png); background-position: 0px 40px; background-repeat: no-repeat; padding-left: 50px; float: left; width: 230px; line-height: 100%; font-family: helvetica; font-size: 11px; text-align: justify} 
