--- a/voiceclaim-blaze.html
+++ b/voiceclaim-blaze.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html>
-<html>
-	
-<body>
+<html style="min-height: 100%; margin:0; padding:0;">
+
+<body style="min-height: 100%; margin:0; padding:0; box-sizing: border-boc;">
 <style>@import url('https://fonts.googleapis.com/css2?family=Metal&display=swap')</style>
 
 
