--- a/voiceclaim-blaze.html
+++ b/voiceclaim-blaze.html
@@ -1,6 +1,6 @@
-<html style="min-height: 100%; margin:0; padding:0;">
+<html style="height: 100%; margin:0; padding:0; overflow: auto;">
 
-<body style="min-height: 100%; margin:0; padding:0; box-sizing: border-boc;">
+<body style="height: 100%; margin:0; padding:0; box-sizing: border-box; overflow: auto; background: linear-gradient(0deg, #998980 0%, #c1bdb8 100%); justify-content: center; align-items: center;">
 <style>@import url('https://fonts.googleapis.com/css2?family=Metal&display=swap')</style>
 
 
@@ -19,7 +19,7 @@
 
 .space { width:50px; height:100px; background:trans; margin-right: 50px; }
 
-.main2 { width:auto; padding:10px; margin-top:0; margin-right: 20%; display: flex; justify-content: flex-end; align-items: right; }
+.main2 { width: auto; padding:10px; margin-top:0; margin-right: 20%; display: flex; justify-content: flex-end; align-items: right; }
 .youtube2 { width: 300px; height: 232px; background: black; color: white; padding: 5px; padding-bottom: 15px;}
 .voice2 { font-family: 'Courier New', Courier, monospace; color: #fff; font-size: 11px; text-align: left; width: 300px; background-color: none; padding: 5px; margin-top: 0; }
 .arrow2 { background-image: url(https://i.postimg.cc/bJbHry93/tri2.png); background-position: 13px 40px; background-repeat: no-repeat; width: 50px; float: left;}
@@ -28,7 +28,6 @@
 
 .line-bottom { width:auto; height:10px; background:#4a4745; margin-top: 20px; }
 </style>
-
 
 
 <div class="bg">
@@ -69,7 +68,7 @@
 
 		<div style="clear:both;"></div>		
 	</div>
-
+	
 	<div class="line-bottom"></div>
 	
 	</center>
@@ -77,6 +76,4 @@
 
 
 </body>
-
 </html>
-
