--- a/voiceclaim-blaze.html
+++ b/voiceclaim-blaze.html
@@ -1,12 +1,11 @@
 <html style="height: 100%; margin:0; padding:0; overflow: auto;">
 
-<body style="height: 100%; margin:0; padding:0; box-sizing: border-box; overflow: auto; background: linear-gradient(0deg, #998980 0%, #c1bdb8 100%); justify-content: center; align-items: center;">
-<style>@import url('https://fonts.googleapis.com/css2?family=Metal&display=swap')</style>
-
-
+<head>
 <style>
+.content { width: 100%; flex-grow: 1; display: flex; flex-direction: column; justify-content: center; }
+
 .bg { background: linear-gradient(0deg, #998980 0%, #c1bdb8 100%) }
-.line-top { width:auto; height:10px; background:#4a4745; margin-bottom: 20px; }
+.line-top { width:auto; height:10px; background:#4a4745; margin-bottom: 40px; }
 .title { font-family: 'Times New Roman'; color: #000; font-size: auto; text-transform: uppercase; margin-bottom:-30px; }
 .name { font-family: 'Metal', serif; color: #000; font-size: 400%; text-transform: uppercase; font-weight: 500; font-style: normal; }
 
@@ -26,9 +25,15 @@
 .pic2 { width: 100px; height:100px; border: 10px solid black; margin-left: 0px; }
 .pic2 img { width: 100px; height: 100px; }
 
-.line-bottom { width:auto; height:10px; background:#4a4745; margin-top: 20px; }
+.line-bottom { width:auto; height:10px; background:#4a4745; margin-top: 40px; }
 </style>
+</head>
 
+
+<body style="min-height: 100vh; display: flex; flex-direction: column; margin:0; padding:0; box-sizing: border-box; overflow: auto; background: linear-gradient(0deg, #998980 0%, #c1bdb8 100%); justify-content: center; align-items: center;">
+<style>@import url('https://fonts.googleapis.com/css2?family=Metal&display=swap')</style>
+
+<div class="content">
 
 <div class="bg">
 	<center>
@@ -72,6 +77,7 @@
 	<div class="line-bottom"></div>
 	
 	</center>
+</div>
 </div>
 
 
