--- a/voiceclaim-blaze.html
+++ b/voiceclaim-blaze.html
@@ -64,7 +64,7 @@
 		<div class="youtube2"><iframe width="auto" height="200" src="https://www.youtube.com/embed/QRjvg6AfqDY?si=Mpd-72k0lDkf6gF2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 			clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 			<div class="voice2">Michael Kovach<br/>
-			Roark "Rocky" Rickaby – Lackadaisy</div>
+			Rocky Rickaby – Lackadaisy</div>
 	
 		</div>
 
