--- a/voiceclaim-blaze.html
+++ b/voiceclaim-blaze.html
@@ -13,14 +13,14 @@
 .pic1 { width: 100px; height: 100px; border: 10px solid black; float: left; }
 .pic1 img { width: 100px; height: 100px; }
 .arrow1 { background-image: url(https://i.postimg.cc/mks3FvdR/tri.png); background-position: 0px 40px; background-repeat: no-repeat; width: 230px; padding-left: 50px; float: left; }
-.youtube1 { width: 300px; height: auto; background: black; color: white; padding: 5px; }
-.voice1 { font-family: 'Courier New', Courier, monospace; color: #fff; font-size: 11px; text-align: left; width: 300px; background-color: none; padding: 5px; margin-top: 0; }
+.youtube1 { width: 300px; height: auto; background: black; color: white; padding-left: 5px; padding-right: 5px; }
+.voice1 { font-family: "Poppins", sans-serif; color: #fff; font-size: 11px; text-align: left; width: 300px; background-color: none; padding: 5px; margin-top: 0px; }
 
 .space { width:50px; height:100px; background:trans; margin-right: 50px; }
 
 .main2 { width: auto; padding:10px; margin-top:0; margin-right: 20%; display: flex; justify-content: flex-end; align-items: right; }
-.youtube2 { width: 300px; height: 232px; background: black; color: white; padding: 5px; padding-bottom: 15px;}
-.voice2 { font-family: 'Courier New', Courier, monospace; color: #fff; font-size: 11px; text-align: left; width: 300px; background-color: none; padding: 5px; margin-top: 0; }
+.youtube2 { width: 300px; height: 232px; background: black; color: white; padding: 5px; padding-bottom: 5px;}
+.voice2 { font-family: "Poppins", sans-serif; color: #fff; font-size: 11px; text-align: left; width: 300px; background-color: none; padding: 0px; margin-top: 0px; margin-bottom: 0px }
 .arrow2 { background-image: url(https://i.postimg.cc/bJbHry93/tri2.png); background-position: 13px 40px; background-repeat: no-repeat; width: 50px; float: left;}
 .pic2 { width: 100px; height:100px; border: 10px solid black; margin-left: 0px; }
 .pic2 img { width: 100px; height: 100px; }
@@ -32,6 +32,7 @@
 
 <body style="min-height: 100vh; display: flex; flex-direction: column; margin:0; padding:0; box-sizing: border-box; overflow: auto; background: linear-gradient(0deg, #998980 0%, #c1bdb8 100%); justify-content: center; align-items: center;">
 <style>@import url('https://fonts.googleapis.com/css2?family=Metal&display=swap')</style>
+<style>@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');</style>
 
 <div class="content">
 
@@ -45,7 +46,7 @@
 	<div class="main1">
 		<div class="pic1"><img src="IMGLINK"></div>
 		<div class="arrow1">
-			<div class="youtube1"><iframe width = auto; height="200" src="https://www.youtube.com/embed/QRjvg6AfqDY?si=Mpd-72k0lDkf6gF2" title="YouTube video player" frameborder="0" allow="accelerometer; 						autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+			<div class="youtube1"><iframe width="auto" height="200" src="https://www.youtube.com/embed/98zWiRr881M?si=DYWleewAWxcn7d4I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 				<div class="voice1">Mason Blomberg<br/>
 				kid!Blitzo – Helluva Boss</div>		
@@ -61,11 +62,10 @@
 
 
 	<div class="main2">
-		<div class="youtube2"><iframe width="auto" height="200" src="https://www.youtube.com/embed/QRjvg6AfqDY?si=Mpd-72k0lDkf6gF2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 			clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+		<div class="youtube2"><iframe width="auto" height="200" src="https://www.youtube.com/embed/wJnqVmJ6CzQ?si=r6dBgGY4MwOr1Epw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 			<div class="voice2">Michael Kovach<br/>
 			Rocky Rickaby – Lackadaisy</div>
-	
 		</div>
 
 		<div class="arrow2"></div>
