--- a/voiceclaim-blaze.html
+++ b/voiceclaim-blaze.html
@@ -1,5 +1,5 @@
 <html style="height: 100%; margin:0; padding:0; overflow: auto;">
-	
+
 <head>
 <style>
 .content { width: 100%; flex-grow: 1; display: flex; flex-direction: column; justify-content: center; }
@@ -44,7 +44,7 @@
 	<div class="name">LODERJUNGES</div>
 
 	<div class="main1">
-		<div class="pic1"><img src="IMGLINK"></div>
+		<div class="pic1"><img src="https://i.postimg.cc/jS2TWQmv/109830876-1624732877680930-2022915045689368181-n.jpg"></div>
 		<div class="arrow1">
 			<div class="youtube1"><iframe width="auto" height="200" src="https://www.youtube.com/embed/98zWiRr881M?si=DYWleewAWxcn7d4I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
@@ -69,7 +69,7 @@
 		</div>
 
 		<div class="arrow2"></div>
-		<div class="pic2"><img src="IMGLINK"></div>
+		<div class="pic2"><img src="https://i.postimg.cc/rFQcFYnK/118961875-1549803771869098-8695091958750118680-n.jpg"></div>
 
 		<div style="clear:both;"></div>		
 	</div>
